[workspace]
members = ["crates/*"]
#exclude = ["crates/proc-macro-srv/proc-macro-test/imp"]
resolver = "2"


[workspace.package]
rust-version = "1.80"
edition = "2021"
license = "Apache-2.0"
authors = ["krpc team"]
repository = "https://github.com/martin1847/krpc-crates"


[workspace.dependencies]
# local crates
# base-db = { path = "./crates/base-db", version = "0.0.0" }
# krpc = { path = "../krpc-rust", features = ["clt"] ,default-features = false }
krpc = { git = "https://github.com/martin1847/krpc-rust", branch = "main", features = ["clt"] ,default-features = false  }
tokio = "1.40.0"


[workspace.lints.rust]
# remember to update RUSTFLAGS in ci.yml if you add something here

elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# FIXME Remove the tidy test once the lint table is stable

## lint groups
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

## allow following lints
# subjective
single_match = "allow"
# () makes a fine error in most cases
result_unit_err = "allow"
# We don't expose public APIs that matter like this
len_without_is_empty = "allow"
# We have macros that rely on this currently
enum_variant_names = "allow"
# Builder pattern disagrees
new_ret_no_self = "allow"
# Has a bunch of false positives
useless_asref = "allow"
# Has false positives
assigning_clones = "allow"

## Following lints should be tackled at some point
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"

## warn at following lints
# CI raises these to deny
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

rc_buffer = "warn"
str_to_string = "warn"