[package]
name = "rpcurl"
version = "24.8.30"
description = "🦀[ Cli Client For KRPC ]"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.16", features = ["derive","env"] }
gethostname = "0.5.0"
serde_json = "1.0.127"
tonic = "0.12.2"
# local deps
krpc.workspace = true
tokio.workspace = true


[build-dependencies]
static_vcruntime = "2.0.0"

[lints]
workspace = true
